fixed style to not to rely on overflow hidden

--- a/src/App.css
+++ b/src/App.css
@@ -38,12 +38,6 @@
   font-size: 18px;
 }
 
-.html, body, .quote-box {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
 .App-header {
   min-height: 8rem;
   display: flex;
@@ -151,7 +145,7 @@ button {
 #sign {
   margin-top: auto;
   width: 100%;
-  padding: 2rem;
+  padding: 2rem 0rem;
   background-color: rgba(2,2,2,0.6);
   display: flex;
 }
